[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peak-acl"
version = "1.5.4"
description = "FIPA-ACL parser and transport for the PEAK framework"
authors = [{ name = "Santiago Bossa", email = "1211173@isep.ipp.pt" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["FIPA", "ACL", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "antlr4-python3-runtime>=4.13",
    "aiohttp >= 3.7 ",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "mypy"]
docs = ["sphinx", "furo", "myst-parser"]

[project.urls]
Homepage = "https://github.com/Santiago-1211173/peak-acl"
Repository = "https://github.com/Santiago-1211173/peak-acl"
"Bug Tracker" = "https://github.com/Santiago-1211173/peak-acl/issues"

[tool.setuptools.packages.find]
where = ["src"]
